--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,49 @@ __pycache__/
 
 # Ignore secret credentials
 client_secret.json
+# ------------------
+# Node.js
+# ------------------
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# ------------------
+# Python
+# ------------------
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pdb
+*.egg-info/
+.eggs/
+*.so
+*.out
+
+# Virtual environments
+.env/
+.venv/
+venv/
+env/
+ENV/
+
+# ------------------
+# Environment & secrets
+# ------------------
+.env
+*.env
+.env.local
+.env.*.local
+
+# ------------------
+# OS / IDE
+# ------------------
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+.vscode/
+.idea/
